# storeManager

./: .gitignore  CMakeLists.txt  build.sh  conanfile.py  x86_64_debian
app/: CMakeLists.txt  app.cpp  conanfile.py  popup.hpp
clock/: CMakeLists.txt  clock.cpp  clock.hpp  conanfile.py
ui/: CMakeLists.txt  conanfile.py  popup.hpp  ui.cpp  ui.hpp
